fixed scrollbar, stretch layout on professors page

--- a/src/components/Body/professors/Professors.module.css
+++ b/src/components/Body/professors/Professors.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 55vh;
+  min-height: 83vh;
 }
 
 .body {
