--- a/src/components/LNav/LeftNav.module.css
+++ b/src/components/LNav/LeftNav.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--color-blackTransparent);
-  height: 100vh;
+  height: 100%;
 }
 
 .nav h1 {
