--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   );
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
